<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_catalogue"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_catalogue" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/baseline_add_circle_24"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_analytics" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>