<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_analytics"
        android:name="com.example.donation_drive_app.ui.analytics.AnalyticsFragment"
        android:label="@string/title_analytics"
        tools:layout="@layout/fragment_analytics" />

    <fragment
        android:id="@+id/navigation_catalogue"
        android:name="com.example.donation_drive_app.ui.catalogue.CatalogueFragment"
        android:label="@string/title_catalogue"
        tools:layout="@layout/fragment_catalogue" />

em    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.donation_drive_app.ui.home.HomeFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.donation_drive_app.ui.upload.UploadsFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.donation_drive_app.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_wishlist"
        android:name="com.example.donation_drive_app.ui.wishlist.WishlistFragment"
        android:label="@string/title_wishlist"
        tools:layout="@layout/fragment_wishlist" />
</navigation>